...
    @StateObject private var viewModel = MovieViewModel()

    var body: some View {
        NavigationView {
            ScrollView {
                VStack(alignment: .leading) {
                    TextField("Search Movies", text: $viewModel.query)
                        .textFieldStyle(RoundedBorderTextFieldStyle())
                        .padding()
                    
                    if !viewModel.query.isEmpty {
                        Text("Search Results")
                            .font(.title2)
...
